midiSequencerInputUnit/Firmware/build/log/idf_py_stdout_output_29597
[1/13] Performing build step for 'bootloader'
[1/1] cd /home/synth002/Desktop/Firmware/build/bootloader/esp-idf/esptool_py && /home/synth002/.espressif/python_env/idf5.0_py3.10_env/bin/python /home/synth002/esp/esp-idf-v5.0/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/synth002/Desktop/Firmware/build/bootloader/bootloader.bin
Bootloader binary size 0x55d0 bytes. 0x2a30 bytes (33%) free.
[2/11] Building C object esp-idf/genericDLL/CMakeFiles/__idf_genericDLL.dir/genericDLL.c.obj
[3/11] Building C object esp-idf/system/CMakeFiles/__idf_system.dir/sequencerGrid.c.obj
FAILED: esp-idf/system/CMakeFiles/__idf_system.dir/sequencerGrid.c.obj 
/home/synth002/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc  -I/home/synth002/Desktop/Firmware/build/config -I/home/synth002/Desktop/Firmware/components/system/include -I/home/synth002/esp/esp-idf-v5.0/components/newlib/platform_include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/esp_additions/include/freertos -I/home/synth002/esp/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/esp_additions/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include/soc -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include/soc/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/port/esp32s3/. -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/port/esp32s3/private_include -I/home/synth002/esp/esp-idf-v5.0/components/heap/include -I/home/synth002/esp/esp-idf-v5.0/components/log/include -I/home/synth002/esp/esp-idf-v5.0/components/soc/include -I/home/synth002/esp/esp-idf-v5.0/components/soc/esp32s3/. -I/home/synth002/esp/esp-idf-v5.0/components/soc/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/platform_port/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/include/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_common/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/port/soc -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/port/include/private -I/home/synth002/esp/esp-idf-v5.0/components/xtensa/include -I/home/synth002/esp/esp-idf-v5.0/components/xtensa/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include/apps -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include/apps/sntp -I/home/synth002/esp/esp-idf-v5.0/components/lwip/lwip/src/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/port/esp32/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/port/esp32/include/arch -I/home/synth002/esp/esp-idf-v5.0/components/nvs_flash/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_partition/include -I/home/synth002/Desktop/Firmware/components/ipsDisplay/include -I/home/synth002/Desktop/Firmware/components/rotaryEncoders/include -I/home/synth002/Desktop/Firmware/components/guiMenu/include -I/home/synth002/Desktop/Firmware/components/switchMatrix/include -I/home/synth002/Desktop/Firmware/components/ledDrivers/include -I/home/synth002/esp/esp-idf-v5.0/components/driver/include -I/home/synth002/esp/esp-idf-v5.0/components/driver/deprecated -I/home/synth002/esp/esp-idf-v5.0/components/driver/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_pm/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_ringbuf/include -I/home/synth002/Desktop/Firmware/components/fileSys/include -I/home/synth002/Desktop/Firmware/components/esp_littlefs/include -I/home/synth002/esp/esp-idf-v5.0/components/vfs/include -I/home/synth002/Desktop/Firmware/components/bleCentralClient/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/include/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/common/osi/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/common/api/include/api -I/home/synth002/esp/esp-idf-v5.0/components/bt/common/btc/profile/esp/blufi/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/common/btc/profile/esp/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/ans/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/bas/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/dis/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/gap/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/gatt/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/ias/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/ipss/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/lls/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/services/tps/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/util/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/store/ram/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/host/store/config/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/porting/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/porting/nimble/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/port/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/porting/npl/freertos/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/nimble/nimble/include -I/home/synth002/esp/esp-idf-v5.0/components/bt/host/nimble/esp-hci/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_timer/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_wifi/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_event/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_phy/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_phy/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_netif/include -I/home/synth002/Desktop/Firmware/components/midiHelper/include -I/home/synth002/Desktop/Firmware/components/genericMacros/include -I/home/synth002/Desktop/Firmware/components/genericDLL/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/synth002/Desktop/Firmware=. -fmacro-prefix-map=/home/synth002/esp/esp-idf-v5.0=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/system/CMakeFiles/__idf_system.dir/sequencerGrid.c.obj -MF esp-idf/system/CMakeFiles/__idf_system.dir/sequencerGrid.c.obj.d -o esp-idf/system/CMakeFiles/__idf_system.dir/sequencerGrid.c.obj -c /home/synth002/Desktop/Firmware/components/system/sequencerGrid.c
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c: In function 'freeAllGridData':
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c:236:9: error: implicit declaration of function 'freeEntireLinkedList'; did you mean 'genericDLL_freeEntireLinkedList'? [-Werror=implicit-function-declaration]
  236 |         freeEntireLinkedList(&g_GridData.gridLinkedListHeadPtrs[a], &g_GridData.gridLinkedListTailPtrs[a]);
      |         ^~~~~~~~~~~~~~~~~~~~
      |         genericDLL_freeEntireLinkedList
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c: In function 'gridDataToMidiFile':
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c:592:23: warning: assignment discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  592 |     midiFileBufferPtr = (trackChunkBasePtr + MIDI_TRACK_HEADER_NUM_BYTES);
      |                       ^
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c: In function 'updateGridLEDs':
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c:797:10: warning: variable 'abortCurrentRow' set but not used [-Wunused-but-set-variable]
  797 |     bool abortCurrentRow = false;
      |          ^~~~~~~~~~~~~~~
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c: At top level:
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c:37:13: warning: 'managePointersAndInsertNewEventNodeIntoLinkedList' declared 'static' but never defined [-Wunused-function]
   37 | static void managePointersAndInsertNewEventNodeIntoLinkedList(SequencerGridItem_t * newEventNodePtr, SequencerGridItem_t * insertLocationPtr, bool isLocationListHeadPtr);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c:77:13: warning: 'deleteEventNode' defined but not used [-Wunused-function]
   77 | static void deleteEventNode(SequencerGridItem_t ** eventNodePtr)
      |             ^~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
